// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`todos reducers should add todos 1`] = `
{
  "data": {
    "entities": {
      "0.1": {
        "completed": false,
        "creationDate": 2020-01-01T00:00:00.000Z,
        "id": 0.1,
        "text": "Learn Angular",
      },
      "0.2": {
        "completed": false,
        "creationDate": 2020-01-01T00:00:00.000Z,
        "id": 0.2,
        "text": "Learn NgRx",
      },
    },
    "ids": [
      0.1,
      0.2,
    ],
  },
  "loading": false,
}
`;

exports[`todos reducers should clear completed todos 1`] = `
{
  "data": {
    "entities": {
      "0.03": {
        "completed": false,
        "creationDate": 2020-01-01T00:00:00.000Z,
        "id": 0.03,
        "text": "Learn Jest",
      },
    },
    "ids": [
      0.03,
    ],
  },
  "loading": false,
}
`;

exports[`todos reducers should delete todos 1`] = `
{
  "data": {
    "entities": {},
    "ids": [],
  },
  "loading": false,
}
`;

exports[`todos reducers should load todos 1`] = `
{
  "data": {
    "entities": {},
    "ids": [],
  },
  "loading": true,
}
`;

exports[`todos reducers should load todos 2`] = `
{
  "data": {
    "entities": {
      "0.234567891": {
        "completed": true,
        "creationDate": 2020-02-01T00:00:00.000Z,
        "id": 0.234567891,
        "text": "Learn Angular",
      },
      "0.345678912": {
        "completed": false,
        "creationDate": 2020-03-01T00:00:00.000Z,
        "id": 0.345678912,
        "text": "Learn Jest",
      },
    },
    "ids": [
      0.234567891,
      0.345678912,
    ],
  },
  "loading": false,
}
`;

exports[`todos reducers should mark todos as complete 1`] = `
{
  "data": {
    "entities": {
      "0.07": {
        "completed": true,
        "creationDate": 2020-01-01T00:00:00.000Z,
        "id": 0.07,
        "text": "Learn Jest",
      },
    },
    "ids": [
      0.07,
    ],
  },
  "loading": false,
}
`;

exports[`todos reducers should update todos 1`] = `
{
  "data": {
    "entities": {
      "0.07": {
        "completed": false,
        "creationDate": 2020-01-01T00:00:00.000Z,
        "id": 0.07,
        "text": "Learn Angular",
      },
    },
    "ids": [
      0.07,
    ],
  },
  "loading": false,
}
`;
